--- a/fi/resume.html
+++ b/fi/resume.html
@@ -122,7 +122,7 @@
 										<h4>IT-avustaja</h4>
 										<p>Eiran aikuislukio | 06.10.-31.12.2020</p>
 										<p>Työtehtävät: <a href="https://fysiikka.omaantahtiin.com/">Omaan tahtiin fysiikkaa</a> -projektin työstäjä LaTeXilla, IT-avustaja avustamassa tietoteknisten ongelmien selvittämisessä ja ratkaisemisessa.</p>
-										<h4>ICT Team Documentation Staff</h4>
+										<h4>ICT-kehitystiimin tallentaja</h4>
 										<p>Tapiolan Lämpö Oy | 01.08.-31.12.2020</p>
 										<p>Työtehtävät: kiinteistö- ja osaketietojen dokumentointi, raportointi sekä päivitys Hausvise -käyttöjärjestelmään.</p>
 										<h4>Kokoonpanotyötekijä</h4>
