--- a/fi/resume.html
+++ b/fi/resume.html
@@ -53,7 +53,7 @@
 										<p>Pääaine: informaatioteknologia</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
 										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
-										<p>GPA: 4.5 / 5 (tutkinto suoritettu erinomaisesti -maininta)</p>
+										<p>GPA: 4.5 / 5 (tutkinto suoritettu erinomaisesti)</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
 										<p>Paras suunnittelupalkinto (Best Design Award) eniten ääniä saaneelle projektille kurssilla ELEC-E7840 Smart Wearables (DriveSense-älyhanska, eleitä tunnistava hanska), Aalto-yliopisto, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
