--- a/fi/studies.html
+++ b/fi/studies.html
@@ -52,7 +52,7 @@
 					<h6>ELEC-A3110 Mekaniikka</h6>
 					<h6>ELEC-A7100 Basic Course in C programming</h6>
 					<h6>ELEC-A7200 Signals and Systems</h6>
-					<h6>ELEC-A5140 Mathematical Softwares</h6>
+					<h6>ELEC-A5140 Matematiikkaohjelmistot</h6>
 					<h6>ELEC-A4130 Sähkö ja magnetismi</h6>
 					<h6>ELEC-A4010 Sähköpaja</h6>
 					<h6>ELEC-C7241 Tietokoneverkot</h6>
