--- a/resume.html
+++ b/resume.html
@@ -47,15 +47,13 @@
                                         					<h4>Aalto University | 2024 – Present</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Marjor: Computer Science</p>
-										<p>Current GPA: 4.58 / 5 (46 CR / 120 CR completed)</p>
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
 										<p>Marjor: Information Technology</p>
-										<p>Thesis Work (grade: 5 / 5):</p>
+										<p>Thesis Work:</p>
 										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</a>
-										<p>GPA: 4.5 / 5 (Graduated with Honours)</p>
+										<p>Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
-										<p>Best Design Award for top-voted project in ELEC-E7840 Smart Wearables course (DriveSense Smart Glove, gesture-recognizing glove), Aalto University, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2nd place (Next Gen Drone Solution), 2025
 										<p>Demola Innovation Project: Drones for National Security, 2024</p>
 										<p>Dean's incentive scholarship, 2021–2024</p>
@@ -104,11 +102,14 @@
                                 <div class="row_side-right">
                                     <div class="skills">
                                         <h3>Work Experience &#128188;<span> </span></h3>
+					    					<h4>Local IT Support</h4>
+					    					<p>University of Helsinki | 23.05.-06.06.2025</p>
+										<p>Responsibility: investigating WLAN network connection and web browsing problems in different operating systems as part of the University of Helsinki's entrance exam development team.</p>
 										<h4>Course Assistant</h4>
 										<p>Aalto University | 07.01.-07.04.2025</p>
 										<p>Responsibility: developing <pa>Informaatioteknologian perusteet</pa> (Fundamentals of Information Technology) course, guiding students, checking calculation exercises and the exam.</p>
 										<h4>Local IT Support</h4>
-										<p>University of Helsinki | 01.05.2023-31.05.2024</p>
+										<p>University of Helsinki | 16.05.-31.05.2024</p>
 										<p>Responsibility: investigating WLAN network connection and web browsing problems in different operating systems as part of the University of Helsinki's entrance exam development team.</p>
 										<h4>Course Assistant</h4>
 										<p>Aalto University | 01.12.2023-31.03.2024</p>
