--- a/fi/resume.html
+++ b/fi/resume.html
@@ -47,15 +47,13 @@
                                         					<h4>Aalto-yliopisto | 2024 – Nykyhetki</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Pääaine: tietotekniikka</p>
-										<p>Tämänhetkinen keskiarvo: 4.58 / 5 (46 op / 120 op suoritettu)</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
-										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
+										<p>Opinnäytetyö:</p>
 										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
-										<p>GPA: 4.5 / 5 (tutkinto suoritettu erinomaisesti)</p>
+										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
-										<p>Paras suunnittelupalkinto (Best Design Award) eniten ääniä saaneelle projektille kurssilla ELEC-E7840 Smart Wearables (DriveSense-älyhanska, eleitä tunnistava hanska), Aalto-yliopisto, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
 										<p>Demola innovaatioprojekti: Drones for National Security, 2024</p>
 										<p>Dekaanin kannustusstipendi, 2021–2024</p>
@@ -104,11 +102,15 @@
                                 <div class="row_side-right">
                                     <div class="skills">
                                         <h3>Työkokemukset &#128188;<span> </span></h3>
+					    					<h4>IT-lähitukihenkilö</h4>
+										<p>Helsingin yliopisto | 23.05.-06.06.2025</p>
+										<p>Työtehtävät: WLAN-verkkoyhteys- ja verkkoselainongelmien selvittäminen eri käyttöjärjestelmissä osana Helsingin yliopiston valintakokeiden kehitystiimiä.</p>
+										<h4>Kurssiassistentti</h4>
 										<h4>Kurssiassistentti</h4>
 										<p>Aalto-yliopisto | 07.01.-07.04.2025</p>
 										<p>Työtehtävät: <pa>Informaatioteknologian perusteet</pa> -kurssin kehittäminen, opiskelijoiden ohjaaminen, laskuharjoitusten ja tentin tarkistaminen.</p>
 										<h4>IT-lähitukihenkilö</h4>
-										<p>Helsingin yliopisto | 01.05.2023-31.05.2024</p>
+										<p>Helsingin yliopisto | 16.05.-31.05.2024</p>
 										<p>Työtehtävät: WLAN-verkkoyhteys- ja verkkoselainongelmien selvittäminen eri käyttöjärjestelmissä osana Helsingin yliopiston valintakokeiden kehitystiimiä.</p>
 										<h4>Kurssiassistentti</h4>
 										<p>Aalto-yliopisto | 01.12.2023-31.03.2024</p>
