--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,12 @@
                                         					<h4>Aalto University | 2024 – Present</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Marjor: Computer Science</p>
+										<h4>University of Helsinki | 2022 – 2025</h4>
+										<p>Bachelor of Science</p>
+										<p>Major: Mathematics</p>
+										<p>Thesis Work (grade: 5 / 5):</p>
+										<a href=""><p>Mathematical Analysis of Volterra Integral Equations</p></a>
+										<p>Bachelor Honours -award</p>
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
 										<p>Marjor: Information Technology</p>
