--- a/fi/resume.html
+++ b/fi/resume.html
@@ -47,10 +47,16 @@
                                         					<h4>Aalto-yliopisto | 2024 – Nykyhetki</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Pääaine: tietotekniikka</p>
+										<h4>Helsingin yliopisto | 2022 – 2025</h4>
+										<p>Luonnontieteiden kandidaatti</p>
+										<p>Pääaine: matematiikka</p>
+										<p>Opinnäytetyö (arvosana: 5 / 5)</p>
+										<a href=""><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
+										<p>Bachelor Honours -kunniamaininta</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
-										<p>Opinnäytetyö:</p>
+										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
 										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
 										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
