--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
 										<p>Marjor: Information Technology</p>
-										<p>Thesis Work:</p>
+										<p>Thesis Work (grade: 5 / 5):</p>
 										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</a>
 										<p>Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
