--- a/fi/resume.html
+++ b/fi/resume.html
@@ -51,13 +51,15 @@
 										<p>Luonnontieteiden kandidaatti</p>
 										<p>Pääaine: matematiikka</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5)</p>
-										<a href=""><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>DOI: 10.13140/RG.2.2.21153.31848</p></a>
 										<p>Bachelor Honours -kunniamaininta</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
-										<a href="https://aaltodoc.aalto.fi/items/382b4842-5687-4339-af1f-57180d1cd5a0">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>DOI: 10.13140/RG.2.2.36252.81289</p></a>
 										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
