--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
 										<p>Bachelor of Science</p>
 										<p>Major: Mathematics</p>
 										<p>Thesis Work (grade: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>Mathematical Analysis of Volterra Integral Equations</p></a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848">Mathematical Analysis of Volterra Integral Equations</a>
 										<p>Bachelor Honours -award</p>
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
