--- a/resume.html
+++ b/resume.html
@@ -51,13 +51,13 @@
 										<p>Bachelor of Science</p>
 										<p>Major: Mathematics</p>
 										<p>Thesis Work (grade: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848">Mathematical Analysis of Volterra Integral Equations</a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>Mathematical Analysis of Volterra Integral Equations</p></a>
 										<p>Bachelor Honours -award</p>
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
 										<p>Marjor: Information Technology</p>
 										<p>Thesis Work (grade: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289">Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</p></a>
 										<p>Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2nd place (Next Gen Drone Solution), 2025
