--- a/fi/resume.html
+++ b/fi/resume.html
@@ -57,7 +57,7 @@
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289">Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</a>
+										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
 										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
