--- a/fi/resume.html
+++ b/fi/resume.html
@@ -50,7 +50,7 @@
 										<h4>Helsingin yliopisto | 2022 – 2025</h4>
 										<p>Luonnontieteiden kandidaatti</p>
 										<p>Pääaine: matematiikka</p>
-										<p>Opinnäytetyö (arvosana: 5 / 5)</p>
+										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
 										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
 										<p>Bachelor Honours -kunniamaininta</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
