--- a/resume.html
+++ b/resume.html
@@ -75,35 +75,16 @@
 										<p>Scholarship for good academic performance and study attitude, 2017</p>
 										<p>Erasmus+ scholarship for project "I am what I eat" exchange student to Lübeck, Germany, 2017</p>
 										<p>School's attitude student award, 2015</p>
-										<div class="skills">
-											<h3>Skills &#128208;</h3>
-											<p>Windows / Linux / macOS</p>
-											<p>Microsoft Office / WordPress / Canva / Figma</p>
-											<p>Python / Scala / Java / R / MATLAB / C / C#</p>
-											<p>MySQL / PostgreSQL</p>
-											<p>JavaScript / TypeScript / Golang</p>
-											<p>Google Cloud Platform / Kubernetes / Docker / Git</p>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Technical Skills & Problem-Solving</p>
-												<div class="progress-bar flexible animate"> <span class="progress-85" style="width: 85%"><span> </span></span>  </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Communication & Team Work</p>
-												<div class="progress-bar flexible animate"> <span class="progress-95" style="width: 95%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Programming & Web Development</p>
-												<div class="progress-bar flexible animate"> <span class="progress-75" style="width: 75%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Creativity & Project Management</p>
-												<div class="progress-bar flexible animate"> <span class="progress-90" style="width: 90%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-										</div>
+										<h3>Languages &#128172;</h3>
+										<p>Finnish & Mandarin Chinese</p>
+										<div class="progress-bar flexible animate"> <span class="progress-100" style="width: 100%"><span> </span></span>  </div>
+										   <div class="clear"> </div>
+										<p>English</p>
+										<div class="progress-bar flexible animate"> <span class="progress-75" style="width: 75%"><span> </span></span> </div>
+										   <div class="clear"> </div>
+										<p>Swedish & German</p>
+										<div class="progress-bar flexible animate"> <span class="progress-50" style="width: 50%"><span> </span></span> </div>
+										   <div class="clear"> </div>
                                    </div>
                                 <div class="row_side-right">
                                     <div class="skills">
@@ -135,27 +116,13 @@
 										<h4>Assembly Worker</h4>
 										<p>Ge-Healthcare | 17.07.-17.08.2020</p>
 										<p>Responsibility: quality assurance and assembly of ventilator monitors and modules.</p>
-										<h3>Languages &#128172;</h3>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Finnish</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Mandarin Chinese</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">English</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Swedish</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">German</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;</p>
-										</div>
+										<h3>Skills &#128208;</h3>
+										<p>Windows / Linux / macOS</p>
+										<p>Microsoft Office / WordPress / Canva / Figma</p>
+										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
+										<p>MySQL / PostgreSQL</p>
+										<p>JavaScript / TypeScript / Golang</p>
+										<p>Google Cloud Platform / Kubernetes / Docker / Git</p>
                                     </div>
                                 </div>
                                 <div class="clear"> </div>
