--- a/fi/resume.html
+++ b/fi/resume.html
@@ -75,38 +75,18 @@
 										<p>Stipendi hyvästä koulumenestyksestä ja positiivisesta asenteesta, 2017</p>
 										<p>Erasmus+ -stpendi Saksan vaihto-opiskeluprojektiin "I am what I eat" Lübeckiin, 2017</p>
 										<p>Koulun asenneoppilas, 2015</p>
-										<div class="skills">
-											<h3>Osaaminen &#128208;</h3>
-											<p>Windows / Linux / macOS</p>
-											<p>Microsoft Office / WordPress / Canva / Figma</p>
-											<p>Python / Scala / Java / R / MATLAB / C / C#</p>
-											<p>MySQL / PostgreSQL</p>
-											<p>JavaScript / TypeScript / Golang</p>
-											<p>Google Cloud Platform / Kubernetes / Docker / Git</p>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Tekniset taidot & Ongelmanratkaisu</p>
-												<div class="progress-bar flexible animate"> <span class="progress-85" style="width: 85%"><span> </span></span>  </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Viestintä & Tiimityöskentely</p>
-												<div class="progress-bar flexible animate"> <span class="progress-95" style="width: 95%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Ohjelmointi & Web-kehitys</p>
-												<div class="progress-bar flexible animate"> <span class="progress-75" style="width: 75%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-											<div class="flx-skill">
-												<p class="flx-skill-title">Luovuus & Projektinhallinta</p>
-												<div class="progress-bar flexible animate"> <span class="progress-90" style="width: 90%"><span> </span></span> </div>
-												   <div class="clear"> </div>
-											</div>
-										</div>
+										<h3>Kielitaidot &#128172;</h3>
+										<p class="flx-skill-title">Suomi & Mandariinikiina</p>
+										<div class="progress-bar flexible animate"> <span class="progress-100" style="width: 100%"><span> </span></span>  </div>
+										   <div class="clear"> </div>
+										<p class="flx-skill-title">Englanti</p>
+										<div class="progress-bar flexible animate"> <span class="progress-75" style="width: 75%"><span> </span></span> </div>
+										   <div class="clear"> </div>
+										<p class="flx-skill-title">Ruotsi & Saksa</p>
+										<div class="progress-bar flexible animate"> <span class="progress-50" style="width: 50%"><span> </span></span> </div>
+										   <div class="clear"> </div>
                                    </div>
                                 <div class="row_side-right">
-                                    <div class="skills">
                                         <h3>Työkokemukset &#128188;<span> </span></h3>
 					    					<h4>IT-lähitukihenkilö</h4>
 										<p>Helsingin yliopisto | 23.05.-06.06.2025</p>
@@ -136,28 +116,13 @@
 										<h4>Kokoonpanotyötekijä</h4>
 										<p>Ge-Healthcare | 17.07.-17.08.2020</p>
 										<p>Työtehtävät: hengityskoneiden monitorien ja moduulien laadunvarmistus- sekä kokoonpanotehtävät.</p>
-										<h3>Kielitaidot &#128172;</h3>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Suomi</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Mandariinikiina</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Englanti</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Ruotsi</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;</p>
-										</div>
-										<div class="flx-skill">
-											<p class="flx-skill-title">Saksa</p>
-											<p class="flx-skill-value">&#127775;&#127775;&#127775;</p>
-										</div>
-                                    </div>
+										<h3>Osaaminen &#128208;</h3>
+										<p>Windows / Linux / macOS</p>
+										<p>Microsoft Office / WordPress / Canva / Figma</p>
+										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
+										<p>MySQL / PostgreSQL</p>
+										<p>JavaScript / TypeScript / Golang</p>
+										<p>Google Cloud Platform / Kubernetes / Docker / Git</p>
                                 </div>
                                 <div class="clear"> </div>
                             </div> 
