--- a/resume.html
+++ b/resume.html
@@ -60,6 +60,8 @@
 										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</p></a>
 										<p>Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
+					                                        <p>Master of Business Administration from Academy Europe Open University (Online MBA Diploma Program), 2025</p>
+										<p>Best Design Award for top-voted project in ELEC-E7840 Smart Wearables course (DriveSense Smart Glove, gesture-recognizing glove), Aalto University, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2nd place (Next Gen Drone Solution), 2025
 										<p>Demola Innovation Project: Drones for National Security, 2024</p>
 										<p>Dean's incentive scholarship, 2021–2024</p>
