--- a/fi/resume.html
+++ b/fi/resume.html
@@ -60,6 +60,8 @@
 										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
 										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
+					                                        <p>Master of Business Administration Academy Europe avoimessa yliopistossa (Online MBA -ohjelma), 2025</p>
+										<p>Paras suunnittelupalkinto (Best Design Award) eniten ääniä saaneelle projektille kurssilla ELEC-E7840 Smart Wearables (DriveSense-älyhanska, eleitä tunnistava hanska), Aalto-yliopisto, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
 										<p>Demola innovaatioprojekti: Drones for National Security, 2024</p>
 										<p>Dekaanin kannustusstipendi, 2021–2024</p>
