--- a/fi/resume.html
+++ b/fi/resume.html
@@ -87,6 +87,9 @@
 										<p class="flx-skill-title">Ruotsi & Saksa</p>
 										<div class="progress-bar flexible animate"> <span class="progress-50" style="width: 50%"><span> </span></span> </div>
 										   <div class="clear"> </div>
+					                                        <p class="flx-skill-title">Ranska & Espanja</p>
+										<div class="progress-bar flexible animate"> <span class="progress-25" style="width: 25%"><span> </span></span> </div>
+										   <div class="clear"> </div>
                                    </div>
                                 <div class="row_side-right">
                                         <h3>Työkokemukset &#128188;<span> </span></h3>
