--- a/resume.html
+++ b/resume.html
@@ -110,13 +110,13 @@
 										<p>Responsibility: developing <a href="https://www.yrittajat.fi/">yrittajat.fi</a> homepage (especially the English version), project work for immigrants and young entrepreneurs, event production, communication tasks and research reporting tasks using WordPress, Dynamics 365, Sylvi and Microsoft Office.</p>
 										<h4>Online Course Developer</h4>
 										<p>Viope Education Oy | 10.06.-30.09.2021</p>
-										<p>Responsibility: Development of <pa>Insinöörifysiikka 2</pa> (Engineering Physics 2) online course for university of applied sciences students on the Viope operating system.</p>
+										<p>Responsibility: Development of <pa>Insinöörifysiikka 2</pa> (Engineering Physics 2) online course for university of applied sciences students on the Viope system.</p>
 										<h4>IT Support</h4>
 										<p>Eira High School for Adults | 06.10.-31.12.2020</p>
 										<p>Responsibility: working in <a href="https://fysiikka.omaantahtiin.com/">Omaan tahtiin fysiikkaa</a> (Physics at Your Own Pace) project with LaTeX, assisting in identifying and solving IT problems.</p>
 										<h4>ICT Team Documentation Staff</h4>
 										<p>Tapiolan Lämpö Oy | 01.08.-31.12.2020</p>
-										<p>Responsibility: documentation, reporting and updating of real estate and stock data to Hausvise operating system.</p>
+										<p>Responsibility: documentation, reporting and updating of real estate and stock data to Hausvise system.</p>
 										<h4>Assembly Worker</h4>
 										<p>Ge-Healthcare | 17.07.-17.08.2020</p>
 										<p>Responsibility: quality assurance and assembly of ventilator monitors and modules.</p>
