--- a/fi/resume.html
+++ b/fi/resume.html
@@ -111,13 +111,13 @@
 										<p>Työtehtävät: <a href="https://www.yrittajat.fi/">yrittajat.fi</a> kotisivun kehittäminen (erityisesti englanninkielinen versio), maahanmuuttaneiden ja nuorten yrittäjien projektityöskentely, tapahtumatuotanto, viestintätehtävät ja tutkimusraportointitehtävät käyttäen WordPress, Dynamics 365, Sylvi ja Microsoft Office.</p>
 										<h4>Verkkokurssin kehittäjä</h4>
 										<p>Viope Education Oy | 10.06.-30.09.2021</p>
-										<p>Työtehtävät: <pa>Insinöörifysiikka 2</pa> -verkkokurssin kehittäminen ammattikorkeakouluopiskelijoille Viope -käyttöjärjestelmään.</p>
+										<p>Työtehtävät: <pa>Insinöörifysiikka 2</pa> -verkkokurssin kehittäminen ammattikorkeakouluopiskelijoille Viope -järjestelmään.</p>
 										<h4>IT-avustaja</h4>
 										<p>Eiran aikuislukio | 06.10.-31.12.2020</p>
 										<p>Työtehtävät: <a href="https://fysiikka.omaantahtiin.com/">Omaan tahtiin fysiikkaa</a> -projektin työstäjä LaTeXilla, IT-avustaja avustamassa tietoteknisten ongelmien selvittämisessä ja ratkaisemisessa.</p>
 										<h4>ICT-kehitystiimin tallentaja</h4>
 										<p>Tapiolan Lämpö Oy | 01.08.-31.12.2020</p>
-										<p>Työtehtävät: kiinteistö- ja osaketietojen dokumentointi, raportointi sekä päivitys Hausvise -käyttöjärjestelmään.</p>
+										<p>Työtehtävät: kiinteistö- ja osaketietojen dokumentointi, raportointi sekä päivitys Hausvise -järjestelmään.</p>
 										<h4>Kokoonpanotyötekijä</h4>
 										<p>Ge-Healthcare | 17.07.-17.08.2020</p>
 										<p>Työtehtävät: hengityskoneiden monitorien ja moduulien laadunvarmistus- sekä kokoonpanotehtävät.</p>
