--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,7 @@
 										<p>Responsibility: developing <a href="https://www.yrittajat.fi/">yrittajat.fi</a> homepage (especially the English version), project work for immigrants and young entrepreneurs, event production, communication tasks and research reporting tasks using WordPress, Dynamics 365, Sylvi and Microsoft Office.</p>
 										<h4>Online Course Developer</h4>
 										<p>Viope Education Oy | 10.06.-30.09.2021</p>
-										<p>Responsibility: Development of <pa>Insinöörifysiikka 2</pa> (Engineering Physics 2) online course for university of applied sciences students on the Viope system.</p>
+										<p>Responsibility: development of <pa>Insinöörifysiikka 2</pa> (Engineering Physics 2) online course for university of applied sciences students on the Viope system.</p>
 										<h4>IT Support</h4>
 										<p>Eira High School for Adults | 06.10.-31.12.2020</p>
 										<p>Responsibility: working in <a href="https://fysiikka.omaantahtiin.com/">Omaan tahtiin fysiikkaa</a> (Physics at Your Own Pace) project with LaTeX, assisting in identifying and solving IT problems.</p>
