--- a/fi/resume.html
+++ b/fi/resume.html
@@ -51,13 +51,13 @@
 										<p>Luonnontieteiden kandidaatti</p>
 										<p>Pääaine: matematiikka</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.21153.31848"><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
+										<a href="https://www.researchgate.net/publication/393712523_Mathematical_Analysis_of_Volterra_Integral_Equations/references"><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
 										<p>Bachelor Honours -kunniamaininta</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
-										<a href="http://dx.doi.org/10.13140/RG.2.2.36252.81289"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
+										<a href="https://urn.fi/URN:NBN:fi:aalto-202406044058"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
 										<p>Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
 					                                        <p>Master of Business Administration Academy Europe avoimessa yliopistossa (Online MBA -ohjelma), 2025</p>
