--- a/studies.html
+++ b/studies.html
@@ -44,6 +44,7 @@
 		<div class="content">
 		<div class="wrap">
 				<div class="studies">
+					<h3>Aalto University</h3>
 					<h6>MS-C1420 Fourier Analysis</h6>
 					<h6>MS-A0502 First Course in Probability and Statistics</h6>
 					<h6>MS-A0502 Differential and Integral Calculus 1</h6>
@@ -87,6 +88,51 @@
 					<h6>CS-E4565 Combinatorics of Computation D</h6>
 					<h6>PHYS-A0140 Structure of Matter</h6>
 					<h6>TU-A1100 Industrial Engineering and Management</h6>
+					<h3>University of Helsinki</h3>
+					<h6>MAT11001 Introduction to University Mathematics</h6>
+					<h6>MAT11002 Linear Algebra and Matrices I</h6>
+					<h6>MAT11006 Calculus IA: Limits and Differentiation</h6>
+					<h6>MAT11007 Calculus IB: Integration</h6>
+					<h6>MAT11009 Basics of Mathematics in Machine Learning I</h6>
+					<h6>MAT11008 Advanced Calculus</h6>
+					<h6>MAT12003 Probability I</h6>
+					<h6>MAT21001 Linear Algebra and Matrices II</h6>
+					<h6>MAT22011 Linear Algebra and Matrices III</h6>
+					<h6>MAT21002 Series</h6>
+					<h6>MAT21003 Vector Analysis I</h6>
+					<h6>MAT21020 Vector Analysis II</h6>
+					<h6>MAT21005 Topology IA</h6>
+					<h6>MAT21006 Topology IB</h6>
+					<h6>MAT21007 Measure and Integral</h6>
+					<h6>MAT22001 Probability IIa</h6>
+					<h6>MAT22002 Probability IIb</h6>
+					<h6>MAT21014 Introduction to Logic I</h6>
+					<h6>MAT21015 Introduction to Logic II</h6>
+					<h6>MAT12001 Basics of Statistics and R I</h6>
+					<h6>MAT12002 Basics of Statistics and R II</h6>
+					<h6>MAT12004 Statistical Interference I</h6>
+					<h6>MAT12005 Project in Data-Analysis</h6>
+					<h6>MAT20016 Latex Course</h6>
+					<h6>MAT20005 Academic Skills</h6>
+					<h6>MAT21019 Applications of Matrix Computations</h6>
+					<h6>MAT22012 Field of Work in Statistics</h6>
+					<h6>FYS1013 Scientific Computing I</h6>
+					<h6>FYS1001 Interactions and Bodies</h6>
+					<h6>FYS1002 Matter and Interactions</h6>
+					<h6>FYS1003 Electromagnetism</h6>
+					<h6>FYS1004 Radiation Fields and Photons</h6>
+					<h6>FYS2003 Basics of Quantum Physics</h6>
+					<h6>FYS1016 Laboratory Exercises in Basic Studies of Physics I</h6>
+					<h6>FYS1017 Laboratory Exercises in Basic Studies of Physics II</h6>
+					<h6>FYS4002 Working Life Skills I - Problem Solving in a Group</h6>
+					<h6>FYS1014 Statistical Analysis of Observations</h6>
+					<h6>FYS1010 Mathematics for Physicists I</h6>
+					<h6>FYS1011 Mathematics for Physicists II</h6>
+					<h6>FYS1012 Mathematics for Physicists III</h6>
+					<h6>FYS2004 Fundamentals of Theory of Relativity</h6>
+					<h6>TKT10002 Intorduction to Programming</h6>
+					<h6>TKT10003 Advanced Course in Programming</h6>
+					<h6>TKT10004 Introduction to Databases</h6>
 					</div>
 					<div class="clear"></div>
 				</div>
