--- a/studies.html
+++ b/studies.html
@@ -88,14 +88,14 @@
 					<h6>CS-E4565 Combinatorics of Computation D</h6>
 					<h6>PHYS-A0140 Structure of Matter</h6>
 					<h6>TU-A1100 Industrial Engineering and Management</h6>
-					<h3>University of Helsinki</h3>
+					<h3 style="margin-top: 10px;">University of Helsinki</h3>
 					<h6>MAT11001 Introduction to University Mathematics</h6>
-					<h6>MAT11002 Linear Algebra and Matrices I</h6>
 					<h6>MAT11006 Calculus IA: Limits and Differentiation</h6>
 					<h6>MAT11007 Calculus IB: Integration</h6>
 					<h6>MAT11009 Basics of Mathematics in Machine Learning I</h6>
 					<h6>MAT11008 Advanced Calculus</h6>
 					<h6>MAT12003 Probability I</h6>
+					<h6>MAT11002 Linear Algebra and Matrices I</h6>
 					<h6>MAT21001 Linear Algebra and Matrices II</h6>
 					<h6>MAT22011 Linear Algebra and Matrices III</h6>
 					<h6>MAT21002 Series</h6>
