--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h2>Hi there! &#128075;</h2>
 					<h2>I'm Wenying Jia</h2>
 					<p></p>
-					<p>A first year Master's student at Aalto University, currently studying Computer Science. 
+					<p>A second year Master's student at Aalto University, currently studying Computer Science. 
 						I'm excited by challenges and I like to learn new things. This is how I keep improving myself.</p>		
 					<div class="buttons">
 						<div class="about_me">
