--- a/fi/index.html
+++ b/fi/index.html
@@ -44,7 +44,7 @@
 					<h2>Hei siellä! &#128075;</h2>
 					<h2>Olen Wenying Jia</h2>
 					<p></p>
-					<p>Aalto-yliopiston maisteriopiskelija, joka opiskelee tällä hetkellä ensimmäistä vuotta tietotekniiikkaa.
+					<p>Aalto-yliopiston maisteriopiskelija, joka opiskelee tällä hetkellä toista vuotta tietotekniiikkaa.
 						Olen innostunut ottamaan haasteita vastaan ja nautin uusien asioiden oppimisesta. Sitä kautta kehitän itseäni jatkuvasti.</p>		
 					<div class="buttons">
 						<div class="about_me">
