--- a/studies.html
+++ b/studies.html
@@ -88,7 +88,7 @@
 					<h6>CS-E4565 Combinatorics of Computation D</h6>
 					<h6>PHYS-A0140 Structure of Matter</h6>
 					<h6>TU-A1100 Industrial Engineering and Management</h6>
-					<h3 style="margin-top: 20px;">University of Helsinki</h3>
+					<h3>University of Helsinki</h3>
 					<h6>MAT11001 Introduction to University Mathematics</h6>
 					<h6>MAT11006 Calculus IA: Limits and Differentiation</h6>
 					<h6>MAT11007 Calculus IB: Integration</h6>
