--- a/studies.html
+++ b/studies.html
@@ -130,7 +130,7 @@
 					<h6>FYS1011 Mathematics for Physicists II</h6>
 					<h6>FYS1012 Mathematics for Physicists III</h6>
 					<h6>FYS2004 Fundamentals of Theory of Relativity</h6>
-					<h6>TKT10002 Intorduction to Programming</h6>
+					<h6>TKT10002 Introduction to Programming</h6>
 					<h6>TKT10003 Advanced Course in Programming</h6>
 					<h6>TKT10004 Introduction to Databases</h6>
 					</div>
