--- a/studies.html
+++ b/studies.html
@@ -133,6 +133,8 @@
 					<h6>TKT10002 Introduction to Programming</h6>
 					<h6>TKT10003 Advanced Course in Programming</h6>
 					<h6>TKT10004 Introduction to Databases</h6>
+					<h6>TKT21031 Ethics of AI</h6>
+					<h6>TKT21028 The Elements of AI: Building AI</h6>
 					</div>
 					<div class="clear"></div>
 				</div>
